Add Some Features

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <link
       rel="shortcut icon"
-      href="./public/Favicon.jpeg"
+      href="./public/assets/Favicon.jpeg"
       type="image/x-icon"
       sizes=""
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-INTERVIEWER</title>
+    <title>AI-INTERVIEWER & ChatBot</title>
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
-  <body>
-    <div id="root" class="w-full h-[100svh] bg-[#081229] text-white"></div>
+  <body id="scroll" class="scroll-smooth">
+    <div id="root" class="w-full min-h-[100svh] bg-[#081229] text-white"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
