interview-and-chatbot-functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body id="scroll" class="scroll-smooth">
-    <div id="root" class="w-full min-h-[100svh] bg-[#081229] text-white"></div>
+    <div id="root" class="w-full bg-[#081229] text-white"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
