--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes=""
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-INTERVIEWER & ChatBot</title>
+    <title>AI HR</title>
     <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body id="scroll" class="scroll-smooth">
